tweak alignment of cultural advice indicator icon [fixDoc#2] [YT AD-649]

--- a/src/applications/atom/custom-styles.scss
+++ b/src/applications/atom/custom-styles.scss
@@ -772,7 +772,8 @@ body.d-flex {
 
     .customIndicatorLabel {
         font-size: 16px;
-        margin-top: -1px;
+        margin-top: 1px;
+        margin-left: 0.15rem;
     }
 
     .culturalAdviceMark {
